--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,21 +1,7 @@
-{
-  "name": "Turk Dars",
-  "short_name": "TurkDars",
-  "start_url": "index.html",
-  "display": "standalone",
-  "background_color": "#020617",
-  "theme_color": "#7c3aed",
-  "orientation": "portrait",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
+"icons": [
+  {
+    "src": "icon.svg",
+    "sizes": "512x512",
+    "type": "image/svg+xml"
+  }
+]
